fix: fixed too big list for Select component

--- a/src/widgets/CustomSelect/CustomSelect.module.scss
+++ b/src/widgets/CustomSelect/CustomSelect.module.scss
@@ -39,6 +39,8 @@
   position: absolute;
   list-style: none;
   width: 100%;
+  max-height: 144px;
+  overflow-y: auto;
   margin-top: 5px;
   padding: 0;
   box-sizing: border-box;
